force fixes and pickupbow fixed

--- a/Final project/Assets/Todo.txt
+++ b/Final project/Assets/Todo.txt
@@ -1,14 +1,17 @@
 TODO - GAME DEV
 
 
+o Change bow so it is already in the equipped position but are activated when chosen
 o Zombies knock player back
 o Zombie and player health bar
 o Zombie attack sound and player hurt sound
-o Player falling sound
 o Zombie spawn and speed random range
 o Add a ceiling
-o Add eary constant sound as background noise
+o Add early constant sound as background noise
 o Add menu music
+o Fix objects loading back in
+o Unselect objects until they are equipped
+o Save File - PlayerPrefs (setint and getint)
 
 - Maybe add bobbing sound with player running
 - Maybe have power ups/health bars randomly spawn
